Finished BEST3 transcription!

--- a/meetups/cncf-bdx/2019-02-12_cncf3.md
+++ b/meetups/cncf-bdx/2019-02-12_cncf3.md
@@ -33,4 +33,39 @@ When you want to expose an application to the real world, you can create [Servic
 Always expose healthckeck routes in your application. Better: normalize thr routes that you will use for your endpoints like "/ping" for the readiness probe and "/health" for the liveness probe. Also, the healthcheck should not report the health of dependent services; if one of the dependent services fails, it might cause a fail in your current healthcheck and cause a domino effect in the best case scenario and a crash and restart loop in the worst case scenario. The worst case scenario is when two applications A and B healthcheck each other and one of the two fail for a reason, causing the other to misbehave and fail, etc.
 
 ## Chaos Engineering: Reliability by continuous learning
-By [Sylvain Hellegouarch](https://twitter.com/lawouach), CTO / Co-founder @ ChaosIQ
+By [Sylvain Hellegouarch](https://twitter.com/lawouach), CTO / Co-founder @ ChaosIQ, [Personal website](http://www.defuze.org/)
+
+### A bit of History: the first Space Station
+
+After years of preparations and tests, the first Space Station was about to be launched into space. The first component to be launched only contained supplies for the next components and inhabited capsules, however, the mission was very close to a failure. The cause: the loss of the anti-radiation shield. Knowing that the resources and tools contained in the launched Space Station component were very precious and it would be insanely expensive to restart from scratch, engineers chose to devise and enact an plan B as soon as possible.
+
+The plan B was to orient the system in such a way that it would create a replacement shield. There was no way to check if the tools were still in a functioning state, though so this was a bet. Fortunately, this plan B was a success and the contents of the system were still usable.
+
+What can we learn from this story? First, that the scientists were reusing a system that has worked before but did not question what would happen if any of its components were inoperant. Never believe that everything will ever be fine. Reintroduce doubt in your design process and embrace questions like "will that process hold up?".
+
+In other words: when an incident happens, start recovering as soon as possible while collecting data on the incident. Identify the root cause, issue a fix, validate and deploy it. This requires a paradigm shift: accept that Production might be very different than what you think and be ready to be not ready.
+
+To move forward in a system, you need to be in control of its risks. Without that, major incidents can become way more spectacular.
+
+### More History: O2
+
+In December of 2018, the network carrier O2 lost their **whole** network because of a certificate issue in a component of a third-party equipment belonging to the Ericsson brand! Resilience must become the top priority of a system, not velocity of change. The reliability of a system must be measured in real time over the lifespan of the system. That is the purpose of Chaos Engineering.
+
+The whole point of Chaos Engineering is not to break everything but rather to degrade systems progressively by eliminating infrastructure components, introducing latency, expiring certificates, checking third-parties, dependencies, fallbacks, configuration changes, etc. In practice, Chaos Engineers uncover and explore potential Points of Failure in a scientific and engineering approach.
+
+```
+-> Hypothesis -> Exploration -> Observation ⌝
+   ⌞ Learning <-  Conclusion <-  Analysis   ⌟
+```
+
+This approach is particularly adapted since new outages can be considered like unknowns caused by technical debt and dark debt. Dark debt, unlike technical dept, is way more insidious as it is implied by the collective complexity of an ecosystem and not on faulty logic or programming style.
+
+When a hypothesis uncovers a regression, the hypothesis can be converted to a validation rule. Nevertheless, do not get it wrong: the final objective is not to eliminate outages and get as close as possible to 100% availability. Chaos Engineering eliminates the most obvious causes of outages. To reach such an objective, relevant business or technical metrics and indicators are a must to measure the impact of each hypothesis, as long as they represent a real world value for end users or technicians/
+
+### Closing words
+
+In case you need tools to introduce your teams to Chaos engineering, you can use Netflix's solution, [ChaosMonkey](https://github.com/netflix/chaosmonkey) or ChaosIQ's suite with the [Chaos Toolkit](https://chaostoolkit.org/), [ChaosHub](https://chaoshub.org/) and [ChaosPlatform](https://chaosplatform.com/).
+
+Chaos Toolkit makes your hypotheses formal and allow you to test them against your systems thanks to the plethora of drivers it supports while keeping tabs on logs and metrics. ChaosPlatform iterates on Chaos Toolkit by enabling collaboration and increasing visibility.
+
+Chaos Engineering is a very recent practice. At Netflix, the infrastructure is stable to the point it does not slow down business and development!
