Continued transcription for CNCF4

--- a/meetups/cncf-bdx/2019-04-02_cncf4.md
+++ b/meetups/cncf-bdx/2019-04-02_cncf4.md
@@ -32,21 +32,40 @@ Side-effect: internally, the communication is handled by kube-proxy and routed t
 
 Admin nodes can communicate with API Server with TLS + SNI, meaning that the hostname appears in clear in the request. Client nodes can communicate through a TCP tunnel with API Server, using the kubelet and kube-proxy.
 
-### Experience feedbacks
+### Experience feedbacks: etcd
 
-[...]
+**etcd as a standalone Pod:** Simple to deploy but impossible to scale, non-persistent storage and risk of loss of quorum. The solution as been deemed impractical for the use case.
+
+**etcd as an [Operator](https://coreos.com/operators/):** Easy to allocate and to manage its lifecycle but still non-persistent storage.
+
+**StatefulSet / Persistent Volume:** Crash-resilient but no lifecycle management, terrible performance linked to network calls and costly.
+
+**etcd on dedicated hardware:** Used in multi-tenant, cost-effective and dedicated resources. Logically separates clients using tokens and namespaces. This solution has been chosen as it is both the most performant and the easiest to manage.
 
 ### Networking
 
-[...]
+Th Nodes need to interact using the [Container Network Interface](https://github.com/containernetworking/cni). Such an infrastructure is very sensitive to latency and there are many implementations and many CVEs. OVH made the choice to rely on their [vRack](https://us.ovhcloud.com/products/networking/vrack-private-network) solution and route at Level 2 without using CNI!
+
+Unfortunately, Level 2 routing implies that the heavy lifting must be handled by the infrastructure. Here, BREX (External Bridge) gives complete control over the network, which makes it a tempting solution. BREX requires ip_forward to be enabled. In addition, it rewrites the origin MAC address during SYN but not during SYN/ACK, which causes a broadcast. This can be problematic when a Node calls the API Server: when the number of nodes increases, one broadcast can essentially become an internal DDoS.
+
+A solution that solves the broadcast issue for ARP requests resides in an ARP Kernel module which intrecepts connections and rewrites the MAC address exposed by the Pod to the one exposed by the Node.
 
 ### Kube-proxy
 
-[...]
+Kube-proxy is the component that handles communication with the Internet. It works in three modes:
+- Userspace: Now deprecated, acted as an actual proxy which forwarded everything;
+- IPTables: Loads IPTables rules in a blocking way. Very fast for small clusters and full of features but not very scalable;
+- IPVS: Hashes Destination ports and IPs, which eventually reduces routing to locating the right hash. Handles connection loss and load balancing but not much more.
+
+For the reload performance and the bandwidth limit, IPVS has been chosen. IPTables would handle 5k services while IPVS is able to scale to 25k before performance and bandwidth loss becomes noticeable.
 
 ### Questions & Answers session
 
-[...]
+Recommended read: [OVH Blog](https://www.ovh.com/fr/blog/)
+
+- OVH maintains a Staging and a Production cluster and runs the CNCF CI  on them;
+- OVH uses the OpenStack API for their cloud provider services with no reimplementation. That means that migrations are painless for OVH users;
+- etcd is not replicated in multiple Availability Zones but is nonetheless replicated and backupped with the commits. Multi-AZ etcd would introduce latency issues and reduce the performance.
 
 ## Traefik: A scalable and HA edge router
 By [Émile Vauge](https://twitter.com/emilevauge), Founder @ Containous, Creator of Traefik  
