Continued transcription for CNCF4

--- a/meetups/cncf-bdx/2019-04-02_cncf4.md
+++ b/meetups/cncf-bdx/2019-04-02_cncf4.md
@@ -73,15 +73,33 @@ By [Émile Vauge](https://twitter.com/emilevauge), Founder @ Containous, Creator
 
 ### History
 
-[...]
+[Traefik](https://traefik.io/) could be classified as a web proxy, like NginX or HAProxy but that would not suffice to describe its true purpose.
+
+Since the 90s, engineers trended towards decoupling their applications, moving from monoliths to service oriented architecture to micro-services. Today, we write application with the most appropriate technologies and can update only part of a system.
+
+The micro-service revolution caused an explosion of the tools that orchestrate them and as such of the configuration that comes with them. A question always remained unaswered, though: how to locate a particular service in a micro-service architecture? Thet is from this idea that Traefik was born.
+
+Traefik will listen orchestrators and reload routes dynamically. The project exceeded 600M downloads, 350 contributors and 21K stars on GitHub. It defenitely responds to the needs of many users. It has been written in Go to follow the path of the tools of its ecosystem and because Go is low-level enough, OSS-friendly and can include dependencies in its builds that are compatible for many architectures. In addition, what if all that configuration was not really needed?
 
 ### Concepts
 
-[...]
+There are a small number of key concepts to understand to get started with Traefik:
+- Providers: they deliver the configuration and routes. Usually, Docker and Kubernetes are considered Traefik providers;
+- Entrypoints: Actual entry points for your system;
+- Backends: sets of servers that eventually handle requests;
+- Frontends: Rules that match and route each request;
+
+Traefik will use your Entrypoints to consult your Frontends in order to call the most appropriate Backend.
+
+In essence, Traefik wants your code to feel simple: it handles heavy lifting such as SSL certificates and reduces the configuration to what is necessary for your application. Routing is done using labels and the solutions supports both Websockets and HTTP/2.
+
+Traefik can serve as an Ingress controller for Kubernetes and it is probably its main use today. It will handle routing, tracing and connects navitely with Prometheus.
 
 ### Enterprise Edition
 
-[...]
+Gives the possibility to install Traefik in the Data and in the Control plane, both clustered. For it to be secure, scalable and highly available, the Control plane listens the Providers and alert the Data place whenever some change has been detected, without increasing complexity much.
+
+The Enterprise Edition is in [early access](https://containo.us/traefikee/) as of the time of writing.
 
 ### The future
 
