Finished CNCF4 transcription!

--- a/meetups/cncf-bdx/2019-04-02_cncf4.md
+++ b/meetups/cncf-bdx/2019-04-02_cncf4.md
@@ -97,10 +97,22 @@ Traefik can serve as an Ingress controller for Kubernetes and it is probably its
 
 ### Enterprise Edition
 
-Gives the possibility to install Traefik in the Data and in the Control plane, both clustered. For it to be secure, scalable and highly available, the Control plane listens the Providers and alert the Data place whenever some change has been detected, without increasing complexity much.
+Gives the possibility to install Traefik in the Data and in the Control plane, both clustered. For it to be secure, scalable and highly available, the Control plane listens the Providers and alert the Data place whenever some change has been detected, without increasing complexity much. Another one of the main differences with the Standard edition is that TraefikEE retains the state and allows for more complex usage such as rate limiting.
 
 The Enterprise Edition is in [early access](https://containo.us/traefikee/) as of the time of writing.
 
 ### The future
 
-[...]
+Traefik 2.0 will soon be generally available. This architecture refresh will push back the limits imposed by the current way of doing things and add some features along the way:
+- Documentation overhaul;
+- Clarification of the concepts, with only three remaining: Entrypoints, Routers and Services;
+- A more expressive routing syntax;
+- Middlewares and chains of middlewares: authentication, retries, cache etc.;
+- Custom resource definition. This is not standard but will offer a more future-proof solution;
+- TCP-level routing with SNI support, passthrough and port to HTTP forwarding;
+
+The Middleware feature currently represents a challenge to solve as the Go package system does not simply allow to plug additional components so the Middlewares are currently included in the codebase.
+
+Later, other features might get released such as UDP, YAML syntax, a new WebUI, NewMetrics, TLS stores, Canary buiilds, more load balancers, etc. More info [here](https://blog.containo.us/back-to-traefik-2-0-2f9aa17be305). Release planned in a few months.
+
+If you would like to work at Containous, run the following docker image: [`containous/jobs`](https://hub.docker.com/r/containous/jobs).
