Table of contents and reading times

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -1,4 +1,22 @@
 # Bordeaux Engineers Share and Talk #5
+🕑 *Estimated reading time:* **8mn**
+
+## Table of Contents
+
+  * [Developers and managers: creating trust in an Agile context](#developers-and-managers--creating-trust-in-an-agile-context)
+    + [Developers](#developers)
+    + [The disagreement triangle](#the-disagreement-triangle)
+    + [Agile](#agile)
+    + [The Delegation Poker](#the-delegation-poker)
+    + [The Lean coffee](#the-lean-coffee)
+    + [Additional tips and notes](#additional-tips-and-notes)
+  * [Knuckle: Automating frontend CI](#knuckle--automating-frontend-ci)
+    + [Installation](#installation)
+    + [Overriding the default behavior](#overriding-the-default-behavior)
+    + [Ejecting](#ejecting)
+  * [Scaling Java applications: To infinity and beyond!](#scaling-java-applications--to-infinity-and-beyond-)
+    + [The process](#the-process)
+    + [Key points](#key-points)
 
 ## Developers and managers: creating trust in an Agile context
 By [Bastien Gallay](https://twitter.com/bastien_gallay), Agile coach @ Upwiser
