--- a/meetups/best-bdx/2019-01-29_best6.md
+++ b/meetups/best-bdx/2019-01-29_best6.md
@@ -1,4 +1,9 @@
 # Bordeaux Engineers Share and Talk #6
+🕑 *Estimated reading time:* **1mn**
+
+## Table of Contents
+
+  * [Hosting an application on AWS. Free of charge.](#hosting-an-application-on-aws-free-of-charge)
 
 ## Hosting an application on AWS. Free of charge.
 By [Adrien Pinson](https://twitter.com/AdrienPinson), Co-founder & CTO @ Yescapa
