--- a/meetups/cncf-bdx/2018-10-23_cncf1.md
+++ b/meetups/cncf-bdx/2018-10-23_cncf1.md
@@ -1,4 +1,10 @@
 # Cloud Native Computing Foundation Bordeaux  #1
+🕑 *Estimated reading time:* **4mn**
+
+## Table of Contents
+
+  * [The kickoff](#the-kickoff)
+  * [Prometheus at scale](#prometheus-at-scale)
 
 ## The kickoff
 By [Étienne Coutaud](https://twitter.com/etiennecoutaud), DevOps consultant @ OCTO Technology - [Slides](https://speakerdeck.com/etiennecoutaud/presentation-de-la-cloud-native-computing-foundation)
