--- a/meetups/cncf-bdx/2018-12-11_cncf2.md
+++ b/meetups/cncf-bdx/2018-12-11_cncf2.md
@@ -1,4 +1,11 @@
 # Cloud Native Computing Foundation Bordeaux #2
+🕑 *Estimated reading time:* **8mn**
+
+## Table of Contents
+
+  * [CNCF News](#cncf-news)
+  * [From GitLabCI to Kubernetes](#from-gitlabci-to-kubernetes)
+  * [The 12 factors of Kubernetes](#the-12-factors-of-kubernetes)
 
 ## CNCF News
 
