--- a/meetups/cncf-bdx/2019-04-02_cncf4.md
+++ b/meetups/cncf-bdx/2019-04-02_cncf4.md
@@ -1,4 +1,23 @@
 # Cloud Native Computing Foundation Bordeaux #4
+🕑 *Estimated reading time:* **9mn**
+
+## Table of Contents
+
+  * [CNCF time](#cncf-time)
+    + [News](#news)
+    + [Discovery of the session](#discovery-of-the-session)
+  * [Kubinception](#kubinception)
+    + [Introduction](#introduction)
+    + [Kubernetes in Kubernetes?](#kubernetes-in-kubernetes-)
+    + [Experience feedbacks: etcd](#experience-feedbacks--etcd)
+    + [Networking](#networking)
+    + [Kube-proxy](#kube-proxy)
+    + [Questions & Answers session](#questions---answers-session)
+  * [Traefik: A scalable and HA edge router](#traefik--a-scalable-and-ha-edge-router)
+    + [History](#history)
+    + [Concepts](#concepts)
+    + [Enterprise Edition](#enterprise-edition)
+    + [The future](#the-future)
 
 ## CNCF time
 
