--- a/meetups/bdx-js/2018-10-03_Babel-7.md
+++ b/meetups/bdx-js/2018-10-03_Babel-7.md
@@ -1,6 +1,14 @@
 # Babel 7
+🕑 *Estimated reading time:* **2mn**
+
 By [Sven Sauleau](https://twitter.com/svensauleau), Compiler developer @ Igalia  
 [Website](https://sauleau.com/) - [Video \[Low quality, FR\]](https://www.youtube.com/watch?v=xlVK2_VJ07o)
+
+## Table of Contents
+
+  * [Introduction](#introduction)
+  * [What's new?](#what-s-new-)
+  * [Questions and details](#questions-and-details)
 
 ## Introduction
 
