Table of content fixes

--- a/meetups/bdx-js/2018-10-03_Babel-7.md
+++ b/meetups/bdx-js/2018-10-03_Babel-7.md
@@ -7,7 +7,7 @@ By [Sven Sauleau](https://twitter.com/svensauleau), Compiler developer @ Igalia
 ## Table of Contents
 
   * [Introduction](#introduction)
-  * [What's new?](#what-s-new-)
+  * [What's new?](#whats-new)
   * [Questions and details](#questions-and-details)
 
 ## Introduction
