--- a/meetups/cncf-bdx/2019-02-12_cncf3.md
+++ b/meetups/cncf-bdx/2019-02-12_cncf3.md
@@ -6,9 +6,9 @@
   * [CNCF News](#cncf-news)
   * [Feedback on two years of production issues with Kubernetes](#feedback-on-two-years-of-production-issues-with-kubernetes)
     + [The issues](#the-issues)
-  * [Chaos Engineering: Reliability by continuous learning](#chaos-engineering--reliability-by-continuous-learning)
-    + [A bit of History: the first Space Station](#a-bit-of-history--the-first-space-station)
-    + [More History: O2](#more-history--o2)
+  * [Chaos Engineering: Reliability by continuous learning](#chaos-engineering-reliability-by-continuous-learning)
+    + [A bit of History: the first Space Station](#a-bit-of-history-the-first-space-station)
+    + [More History: O2](#more-history-o2)
     + [Closing words](#closing-words)
 
 ## CNCF News
